--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
-      "name": "Fallen Robot",
+      "name": "Dazai Robot",
       "description": "Telegram Group Management Bot.",
-      "logo": "https://te.legra.ph/file/72e135da30a1a349f2844.jpg",
+      "logo": "https://telegra.ph/file/ee28ffa1fa36ac19faa41.jpg",
       "keywords": [
          "telegram",
          "modular",
          "group",
          "manager",
-         "Fallen"
+         "Dazai"
       ],   
-   "repository": "https://github.com/AnonymousX1025/FallenRobot",
+   "repository": "https://github.com/adi6804/DazaiRobot",
    "stack": "heroku-22",
    "addons": [
       {
@@ -61,7 +61,7 @@
       "OWNER_ID": {
          "description": "Your user ID as an integer.",
          "required": true,
-         "value": "1356469075"
+         "value": "6171176459"
       },
       "START_IMG": {
          "description": "Telegraph link of the image which will be shown at start command.",
@@ -71,7 +71,7 @@
       "SUPPORT_CHAT": {
          "description": "Your Telegram support group chat username where your users will go and bother you with shit But be like: MyGroupChatUsernameBlah. If this ever points to Fallen Support than consider you made an enemy.",
          "required": true,
-         "value": "DevilsHeavenMF"
+         "value": "The_Apexx"
       },
       "TIME_API_KEY": {
          "description": "Required for timezone information. Get yours from https://timezonedb.com/api",
